@startuml recipe
    !include ../style/commons.style

    package com.fastxml.jackson.databind {
        class ObjectMapper {}
    }

    package wadge.recipe {

        package api {
            interface IDataManager {
                readFile(fileName: string): List<Recipe>
            }
        }

        package impl {
            class DataManager implements IDataManager {
                - mapper: ObjectMapper <<final>>
                - instance: IDataManager <<static>>
                - this(): DataManager
                + getInstance(): IDataManager
                + readFile(fileName: string): List<Recipe>
            }

            class Ingredient {
                - name: string
                - quantity: string
                - this(): Ingredient
                + this(name: string, quantity: string): Ingredient
            }

            class Recipe {
                - name: string 
                - steps: List<string> 
                - servings: int 
                - preparation: int 
                - difficulty: int 
                - link: string
                - ingredient: List<Ingredient>
                - this(): Recipe
                + this(name: string, steps: List<string>, servings: int, preparation: int, difficulty: int, link: string, ingredients: List<Ingredient>): Recipe
            }
        }
    }

    DataManager o..> ObjectMapper
    DataManager *--> Recipe

    Recipe *..> Ingredient

@enduml